rpi5/paperless/gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  labels:
    app: gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      name: gotenberg
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:8.37.0@sha256:f29984bd1e226bf1b93ba90af06000afa8b315853e99d27b9aaa41b93f15c769
          imagePullPolicy: IfNotPresent
          command:
            - gotenberg
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          ports:
            - containerPort: 3000
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            privileged: false
            runAsUser: 1001
          readinessProbe:
            httpGet:
              port: 3000
              path: /health
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
