rpi5/paperless/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless
  labels:
    app: paperless
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  serviceName: paperless
  template:
    metadata:
      name: paperless
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0@sha256:6b94799bc769a063b3340cc5847402e626d4d91d29a295a8e747f8e9bead4207
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/consume
              name: consume
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 4Gi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      volumes:
        - name: consume
          nfs:
            path: /mnt/GuptaZ/Public/Paperless_INBOX
            server: 192.168.1.10
        - name: media
          nfs:
            path: /mnt/GuptaZ/Home/Paperless
            server: 192.168.1.10
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
