rpi5/paperless/tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  labels:
    app: tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      name: tika
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: tika
    spec:
      containers:
        - name: tika
          image: apache/tika:3.3.1.0-full@sha256:d8e6ed96260ad89307a93195a1b856102987a818ac648502f8efbaf313d32470
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9998
              protocol: TCP
      restartPolicy: Always
