rpi5/paperless/ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.anshulg.direct`) || Host(`paperless`)
      services:
        - name: paperless
          port: 80
  tls:
    secretName: paperless-public-cert-tls
    domains:
      - main: paperless.anshulg.direct
        sans:
          - paperless
